# wmx-suite

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_results.yml  bug_report.yml  config.yml  feature_request.yml
docs/mockups/: cli-output-mockup.html
docs/superpowers/plans/: 2026-06-13-calibrate.md  (+4 more)
tests/: test_benchmark.py  test_cli.py  test_cli_global_flags.py  test_compatibility_and_prompt.py  test_config.py  test_db.py  test_device.py  test_embeddings_benchmark.py  test_generate.py  test_kokoro_batch.py  test_kokoro_benchmark.py  test_kokoro_remaining.py  test_kokoro_safety.py  test_kokoro_ttfa.py  test_launcher.py  test_measure_one.py  test_models.py  test_probe_math.py  test_probe_worker.py  test_profiles.py  test_search_and_resolve.py  test_serve.py  test_system.py  test_ui.py  test_view_benchmark_embeddings.py  test_view_benchmark_kokoro.py  test_view_benchmark_kokoro_concurrency.py  test_view_calibrate.py  test_view_characterize.py  test_view_health.py  test_view_landing.py  test_view_list.py  test_view_run_messages.py  test_view_scan.py  test_view_search.py  test_view_show.py  test_view_system.py  test_web.py
wills_mlx_suite/: __init__.py  cli.py  db.py  launcher.py  models.py  probe.py  probe_worker.py  system.py
wmx_suite/: __init__.py  benchmark.py  cli.py  cli_benchmarks.py  config.py  db.py  device.py  embeddings_probe.py  generate.py  kokoro_safety.py  launcher.py  measure_one.py  models.py  probe.py  probe_worker.py  probe_worker_embeddings.py  probe_worker_kokoro.py  probe_worker_kokoro_baseline.py  probe_worker_kokoro_batch.py  probe_worker_kokoro_cache.py  probe_worker_kokoro_ttfa.py  probe_worker_kokoro_voice.py  profiles.py  serve.py  system.py  ui.py
wmx_suite/views/: __init__.py  benchmark_embeddings.py  benchmark_kokoro.py  benchmark_kokoro_concurrency.py  calibrate.py  characterize.py  health.py  landing.py  list.py  run_messages.py  scan.py  search.py  show.py  system.py
wmx_suite/web/: app.py
(+23 files in other folders)
