[project]
name = "wills-mlx-suite"
version = "0.1.0"
description = "Custom memory/stress bench for local MLX inference on Apple Silicon — finds safe context ceilings without crashing the machine."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Will Sarg" }]
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.31",
]

[project.optional-dependencies]
web = ["flask>=3.0"]

[project.scripts]
mlx-suite = "wills_mlx_suite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wills_mlx_suite"]
