[project]
name = "wmx-suite"
version = "0.1.0"
description = "Custom memory/stress bench for local MLX inference on Apple Silicon — finds safe context ceilings without crashing the machine."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Will Sarg" }]
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.31",
]

[project.optional-dependencies]
web = ["flask>=3.0"]

[project.scripts]
wmx-suite = "wmx_suite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wmx_suite"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
